# digital-twin-playground

./: .gitignore  .gitmodules  .justfile  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  build.rs  index.html  rust-toolchain.toml
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  deploy-page.yml  rust-clippy.yml  typos.yml
3d_models/: rotary_pendulum.blend
assets/: pendulum.webm  rotary_pendulum.glb
docs/: book.toml
docs/src/: SUMMARY.md  project-introduction.md
docs/src/architecture/: introduction.md
docs/src/contributing/: introduction.md
docs/src/getting-started/: introduction.md  linux.md  mac.md  windows.md
docs/src/user-interface/: controls.md  introduction.md
proto/: digital_twin.proto
src/: animation_plugin.rs  camera_controller_plugin.rs  config_plugin.rs  embedded_model.rs  grid_plugin.rs  main.rs  morph_viewer_plugin.rs  scene_viewer_plugin.rs
src/grpc_plugin/: bridge.rs  mod.rs  service.rs  systems.rs
web/: app.css
