[package]
name = "digital-twin-playground"
version = "0.2.0"
edition = "2021"
authors = ["Caio Piccirillo <caiopiccirillo@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.15.0", features = ["serialize"] }
bevy_panorbit_camera = { version = "0.21.2" }
bevy_rapier3d = { version = "0.28.0", features = [
    "simd-stable",
    "wasm-bindgen",
] } # "debug-render-3d
bevy-inspector-egui = "0.28.0"
bevy-persistent = { version = "0.7.0", features = ["all"] }
serde = { version = "1.0", features = ["derive"] }
dirs = "6.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations in release mode
[profile.release]
opt-level = 'z'

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[features]
default = ["embedded-model"]
embedded-model = []
blender-model = []
