[package]
name = "digital-twin-playground"
version = "0.2.0"
edition = "2021"
authors = ["Caio Piccirillo <caiopiccirillo@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.18", features = ["serialize"] }
avian3d = "0.6.1"
bevy_panorbit_camera = "0.34"
bevy-inspector-egui = "0.36"
bevy_egui = { version = "0.39", default-features = false }
bevy-persistent = { version = "0.10", features = ["all"] }
serde = { version = "1.0", features = ["derive"] }
dirs = "6.0"
tonic = { version = "0.14", optional = true }
prost = { version = "0.14", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"], optional = true }
tokio-stream = { version = "0.1", optional = true }
tonic-reflection = { version = "0.14", optional = true }

[build-dependencies]
tonic-build = { version = "0.14", optional = true }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations in release mode
[profile.release]
opt-level = 'z'

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[features]
default = ["embedded-model"]
embedded-model = []
blender-model = []
grpc = ["tonic", "prost", "tokio", "tokio-stream", "tonic-build", "tonic-reflection"]
